# rag-document-qa

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_query_logs.py
backend/app/: config.py  llm_client.py  main.py  schemas.py
backend/app/api/: routes_documents.py  routes_query.py  routes_search.py  routes_stats.py
backend/app/db/: models.py  session.py
backend/app/eval/: dataset.py  judge.py  metrics.py  run_eval.py  testset.sample.jsonl
backend/app/generation/: answer.py
backend/app/ingestion/: chunker.py  embedder.py  pdf.py  service.py
backend/app/observability/: pricing.py  tracking.py
backend/app/retrieval/: base.py  hybrid.py  keyword.py  service.py  vector.py
frontend/: package-lock.json
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: ChatPanel.tsx  CitedAnswer.tsx  StatsPanel.tsx  UploadPanel.tsx  Workspace.tsx
frontend/lib/: api.ts  client.ts  types.ts
